[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "anthropic>=0.62.0",
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.13.5",
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "google-genai>=1.31.0",
    "gunicorn>=23.0.0",
    "markdown2>=2.5.4",
    "matplotlib>=3.10.6",
    "networkx>=3.5",
    "numpy>=2.3.2",
    "openai>=1.99.6",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.4.2",
    "python-dateutil>=2.9.0.post0",
    "redis>=6.4.0",
    "reportlab>=4.4.3",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "selenium>=4.35.0",
    "sqlalchemy>=2.0.42",
    "stripe>=12.4.0",
    "trafilatura>=2.0.0",
    "weasyprint>=66.0",
    "werkzeug>=3.1.3",
    "yfinance>=0.2.65",
]
